	argument.  Reported by Jürgen Kluge.

    o	svd(x) and eigen(x) now behave analogously to qr(x) in
	accepting logical matrices x.

    o	[Experimental]  File NEWS is now in UTF-8, and has a BOM
	(often invisible) on the first line, and Emacs local variables
	set for UTF-8 at the end.  RShowDoc("NEWS") should display
	this correctly, given suitable fonts.


Rd HELP FILE CHANGES

    o	An experimental tag \Sexpr has been added to Rd files, to
	evaluate expressions at build, install, or render time.
	Currently install time and render time evaluation are
	supported but not used in base or contributed packages unless
	the environment variable USE_NEW_HELP is set during
	installation.

    o	The parse_Rd() parser has been made more tolerant of coding
	errors in Rd files:  now all syntax errors are reported as
	warnings, and an attempt is made to continue parsing.

    o	parse_Rd() now has an argument 'fragment' (default FALSE) to
	accept small fragments of Rd files (so that \Sexpr can output
	Rd code which is then parsed).

    o	parse_Rd() now always converts its input to UTF-8.  The Rd2*
	rendering functions have a new parameter, 'outputEncoding',
	which controls how their output is encoded: by default in
	the local encoding.

    o	There have been various bug fixes and code reorganization in
	the Rd renderers Rd2HTML, Rd2latex, Rd2txt, and Rd2ex.


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.

    o	png(type="cairo1") is defunct: the value is no longer recognized.


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).


INTERNATIONALIZATION

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.
