@@ -181,7 +181,7 @@ drop.terms <- function(termobj, dropx = NULL, keep.response = FALSE)
 
 terms.formula <- function(x, specials = NULL, abb = NULL, data = NULL,
 			  neg.out = TRUE, keep.order = FALSE,
-                          simplify = FALSE, ..., allowDotAsName = FALSE)
+                         simplify = FALSE, ..., allowDotAsName = FALSE)
 {
     fixFormulaObject <- function(object) {
         Terms <- terms(object)
@@ -196,8 +196,9 @@ terms.formula <- function(x, specials = NULL, abb = NULL, data = NULL,
             tmp <- c(tmp, tmp2[ind])
         }
 	form <- formula(object)
-	lhs <- if(length(form) == 2L) NULL else
-          paste(deparse(form[[2L]]), collapse="")
+	lhs <- if(length(form) > 2L)
+            paste(deparse(form[[2L]], backtick=TRUE), collapse="")
+        ## else NULL is implicit
 	rhs <- if(length(tmp)) paste(tmp, collapse = " + ") else "1"
 	if(!attr(terms(object), "intercept")) rhs <- paste(rhs, "- 1")
 	formula(paste(lhs, "~", rhs))
